# scipio

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.circleci/: config.yml
.github/workflows/: ci.yml  docs.yml
migrations/: 20240722170323_initial.down.sql  20240722170323_initial.up.sql
pantheon-macros/: Cargo.toml
pantheon-macros/tests/: mod.rs  test_build_query.rs
scipio-airtable/: Cargo.toml
scipio-airtable/src/: lib.rs  retry.rs
scipio-airtable/src/base_data/: bases.rs  entities.rs  mod.rs  records.rs  responses.rs
scipio-airtable/src/base_data/tests/: bases.rs  fixtures.rs  mod.rs  records.rs
scipio-airtable/src/tests/: bases.rs  fixtures.rs  mod.rs  records.rs
scipio-macros/: Cargo.toml
scipio-macros/src/: lib.rs
scipio-macros/tests/: test_build_query.rs  test_partial.rs
scipio-sendgrid/: Cargo.toml
scipio-sendgrid/src/: entities.rs  lib.rs  mail_send.rs  retry.rs
scipio-sendgrid/src/tests/: fixtures.rs  mail_send.rs  mod.rs
scipio-workspace/: Cargo.toml
scipio-workspace/src/: lib.rs  retry.rs  user.rs
scipio-workspace/src/tests/: fixtures.rs  mod.rs
src/: cli.rs  main.rs
src/app/: api_docs.rs  api_response.rs  errors.rs  mod.rs
src/app/api/: controllers.rs  mod.rs
src/app/api/middleware/: mod.rs
src/app/api/v1/: mod.rs
src/app/api/v1/authz/: controllers.rs  mod.rs
src/app/api/v1/cycles/: controllers.rs  mod.rs  responses.rs
src/app/api/v1/data_exports/: controllers.rs  export_users_to_workspace.rs  mod.rs  requests.rs  responses.rs
src/app/api/v1/data_imports/: airtable.rs  controllers.rs  import_airtable_base.rs  mod.rs  requests.rs  responses.rs
src/app/api/v1/jobs/: controllers.rs  mod.rs  responses.rs
src/app/api/v1/stats/: controllers.rs  mod.rs
src/app/api/v1/volunteers/: controllers.rs  mod.rs  responses.rs
src/app/context/: mod.rs
src/app/state/: mod.rs
src/services/: mod.rs
src/services/airtable/: entities.rs  mod.rs
src/services/airtable/base_data/: mod.rs
src/services/airtable/base_data/bases/: mod.rs  responses.rs
src/services/airtable/base_data/records/: mod.rs  responses.rs
src/services/airtable/entities/: bases.rs  mod.rs  record.rs  schema.rs
src/services/airtable/tests/: bases.rs  fixtures.rs  mod.rs  records.rs
src/services/auth/: auth0.rs  mod.rs  noop.rs
src/services/mail/: mod.rs  noop.rs  sendgrid.rs
src/services/mail/tests/: mod.rs
src/services/pubsub/: mod.rs
src/services/storage/: cycles.rs  entities.rs  jobs.rs  mentors.rs  mod.rs  nonprofits.rs  stats.rs  types.rs  volunteers.rs
src/services/storage/queries/cycles/: create_cycle.sql  delete_cycle.sql  fetch_cycle_by_id.sql  fetch_cycles.sql
src/services/storage/queries/jobs/: edit_job.sql  (+6 more)
src/services/storage/tests/: cycles.rs  jobs.rs  mentors.rs  mod.rs  nonprofits.rs  volunteers.rs
src/services/url/: mod.rs  tests.rs
src/services/workspace/: entities.rs  mod.rs  noop.rs  service_account.rs
src/services/workspace/tests/: mod.rs
templates/email/: base.html  footer.html  header.html  onboard.html
(+34 files in other folders)
