workspace = { members = ["pantheon-macros"] }
[package]
name = "scipio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-nats = "0.36.0"
async-trait = "0.1.81"
axum = { version = "0.7.5", features = [
  "http2",
  "ws",
  "macros",
  "multipart",
  "tracing",
  "tokio",
  "form",
  "query",
] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-macros = "0.4.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.9", features = ["derive", "env"] }
csv = "1.3.0"
derive_builder = "0.20.0"
derive_more = { version = "1.0.0", features = ["full"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
log = "0.4.22"
mobc = "0.8.4"
mobc-redis = "0.8.2"
rand = "0.8.5"
reqwest = { version = "0.12.5", default-features = false, features = [
  "cookies",
  "gzip",
  "brotli",
  "json",
  "multipart",
  "stream",
  "rustls-tls",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_with = "3.9.0"
sqlx = { version = "0.8.0", features = [
  "time",
  "uuid",
  "postgres",
  "chrono",
  "runtime-tokio",
  "macros",
  "migrate",
] }
thiserror = "1.0.63"
tokio = { version = "1.38.1", features = ["full"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
pantheon-macros = { path = "pantheon-macros" }
serde_urlencoded = "0.7.1"
tracing = "0.1.40"
tower-http = { version = "0.5.2", features = ["full"] }
regex = "1.10.6"
utoipa = { git = "https://github.com/juhaku/utoipa.git", rev = "5e780f1", features = [
  "axum_extras",
  "chrono",
  "uuid",
] }
utoipa-rapidoc = { git = "https://github.com/juhaku/utoipa.git", rev = "5e780f1", features = [
  "axum",
] }
lazy_static = "1.5.0"
futures = "0.3.30"
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"
tera = "1.20.0"


[dev-dependencies]
mockall = "0.13.0"
rstest = "0.22.0"
