[package]
name = "scipio-sendgrid"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
derive_builder = "0.20.2"
dotenvy = "0.15.7"
reqwest = { version = "0.12.8", default-features = false, features = [
  "json",
  "rustls-tls",
] }
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.11.0"
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
rstest = "0.23.0"

[features]
default = []
integration = []
